如何去除扫描全能王水印.md

--- a/tools/如何去除扫描全能王水印.md
+++ b/tools/如何去除扫描全能王水印.md
@@ -18,11 +18,15 @@ Description: "操作简单、支持批量、免费无损无添加 - 大宁工作
 >
 > 也可以放心使用网站去除水印，文件是上传到阿里云oss对象私有加密存储，去除水印的文件下载链接也是经过加密处理，5分钟有效，每天凌晨自动删除前一天的所有文件
 
-第二步：分析文件，识别水印
+第二步：分析文件，识别扫描全能王文字水印、二维码水印
 
-![扫描全能王-识别图片水印](assert/扫描全能王-识别图片水印.jpg)
+![扫描全能王-水印识别](assert/扫描全能王-水印识别.jpg)
 
-这一步可以识别出扫描全能王的二维码图片水印，是『扫描全能王 创建』的文字水印程序就可以判断，没有展示出来
+可以看到非常准确的分析识别出扫描全能王的二维码图片水印和文字水印『扫描全能王 创建』
+
+第三步：去除水印，预览
+
+![扫描全能王-去除水印预览](assert/扫描全能王-去除水印预览.jpg)
 
 
 
