--- a/php/快速搭建.md
+++ b/php/快速搭建.md
@@ -1,48 +1,47 @@
 centos7安装php7.4
 
-1.安装 EPEL 软件包：
-yum install -y epel-release
+- 安装及安装扩展
 
-2.安装 remi 源(安装后在/etc/yum.repos.d/下就有php源了)：
-yum install -y http://rpms.remirepo.net/enterprise/remi-release-7.rpm
+```
+yum install libxml2-devel sqlite-devel libcurl-devel oniguruma-devel libpng-devel libjpeg-devel freetype-devel libzip-devel openssl-devel -y
+```
 
-3.安装 yum 扩展包：
-yum install -y yum-utils
+```
+./configure --prefix=/usr/local/php82 --with-config-file-path=/etc --with-mhash --with-openssl --with-mysqli=mysqlnd --with-pdo-mysql=mysqlnd --with-iconv --with-zlib --disable-debug --disable-rpath --enable-shared --enable-bcmath --enable-shmop --enable-sysvsem --enable-gd --with-jpeg --with-freetype --enable-mbregex --enable-mbstring --enable-ftp --enable-pcntl --enable-sockets --enable-soap --without-pear --with-gettext --enable-session --with-curl  --enable-opcache --enable-fpm --with-fpm-user=php --with-fpm-group=php --without-gdbm --enable-fast-install 
+```
 
-4.安装及安装扩展
-yum install -y php74
+- 查看php版本
+    php74 -v
 
-yum install -y php74-php-fpm php74-php-gd php74-php-json php74-php-mbstring php74-php-mysqlnd php74-php-xml php74-php-xmlrpc php74-php-opcache
+- 配置文件 php.ini 和 php-fpm.conf
 
-yum install -y php74-php-devel
+php.ini-production
 
-5.查看php版本
-php74 -v
+```
+cp php.ini-production /etc/php.ini
+```
 
-6.启动和添加开机启动
-systemctl start php74-php-fpm
-systemctl enable php74-php-fpm
+- 启动和添加开机启动
 
-7.链接php文件
-ln -s /opt/remi/php74/root/usr/bin/php /usr/bin/php
+```
+cd php-8.2.7/sapi/fpm
 
-8.如果运行的是nginx而不是apache，修改
+cp php-fpm.service /etc/systemd/system/
+
+# 启动php-fpm
+systemctl start php-fpm
+
+# 查看是否启动
+systemctl status php-fpm
+```
+
+- 修改用户
+
+```
 vi /etc/opt/remi/php74/php-fpm.d/www.conf
 user = apache
 group = apache
 修改为
 user = nginx
 group = nginx
-
-9.为nginx开启php的session权限
-cd /var/opt/remi/php74/lib/php/ #进入php目录
-chown -R nginx:nginx session #开启nginx保存session的权限
---------------------------------------------------------
-配置文件目录
-/opt/remi/php74/root/usr/bin/php-config
-/var/opt/remi/php74/lib/php/session
-/etc/opt/remi/php74/php.ini
-/etc/opt/remi/php74/php-fpm.d/www.conf
-
-卸载
-yum remove php74*
+```
