--- a/about me/年薪百万的程序员简历.md
+++ b/about me/年薪百万的程序员简历.md
@@ -55,3 +55,21 @@
 **个人项目:**
 
 - GitHub链接: https://github.com/zhangsan
+
+
+
+
+
+
+
+chatgpt 优化建议：
+
+1. 强调核心技能：在简历中，突出您的核心技能，特别是与岗位要求相关的技能。在您的技术栈中，熟练掌握Golang和Java，以及了解Python和PHP语言是非常有优势的。强调您的HTTP/GRPC接口开发经验和了解WebSocket开发，这对于构建分布式系统和微服务非常重要。
+2. 关注分布式系统和微服务经验：在项目经历中，突出您在分布式系统和微服务设计方面的经验。提及您参与的项目中如何拆分服务、进行服务治理、限流熔断以及使用Sidercar进行服务管理的经历。这显示您在构建可伸缩和高可用性系统方面的能力。
+3. 强调对开发工具和框架的熟悉：在简历中强调您熟悉的开发工具和框架，如MySQL、Redis和Linux操作系统。提及您的经验包括Mysql应用开发、索引原理和性能优化，以及对Redis的熟悉。还要突出您对Linux操作系统的熟悉程度，包括线上环境部署和问题排查，以及熟悉Shell脚本编写。
+4. 强调大数据技术经验：如果您在大数据技术方面有经验，例如Hadoop、Spark、Flink和HBase等，务必在简历中突出强调。这将显示您在处理大规模数据和分布式处理方面的能力。
+5. 前端和桌面软件经验：虽然岗位需求主要集中在后端开发，但如果您在前端开发方面有经验，特别是了解React和负责过后台页面开发，以及对桌面软件开发的理解和经验，也值得在简历中提及。
+6. 项目业绩量化：在描述项目经历时，尽量使用量化的语言来说明您的成就。例如，提到如何极大提高了SDK配置接口的稳定性，解决了广告SDK配置导致应用崩溃的问题，或者如何通过服务化拆分提高了交付与部署效率，并节省了运营成本。这样的量化描述可以更具说服力地展示您的能力和成果。
+7. 突出沟通和学习能力：在岗位要求中强调了良好的学习和沟通能力，以及责任心和钻研精神。在简历中，可以通过项目经历中的团队合作和沟通、学习新技
+
+https://xie.infoq.cn/article/531c93b9dcf8d954052ab6a73
