--- a/php/编译安装.md
+++ b/php/编译安装.md
@@ -1,4 +1,4 @@
-# 安装php7.4
+# 安装php
 
 下载地址：
 
@@ -9,7 +9,8 @@ yum install libxml2-devel sqlite-devel libcurl-devel oniguruma-devel libpng-deve
 ```
 
 ```
-./configure --prefix=/usr/local/php80 --with-config-file-path=/etc --with-mhash --with-openssl --with-mysqli=mysqlnd --with-pdo-mysql=mysqlnd --with-iconv --with-zlib --disable-debug --disable-rpath --enable-shared --enable-bcmath --enable-shmop --enable-sysvsem --enable-gd --with-jpeg --with-freetype --enable-mbregex --enable-mbstring --enable-ftp --enable-pcntl --enable-sockets --enable-soap --without-pear --with-gettext --enable-session --with-curl  --enable-opcache --enable-fpm --with-fpm-user=php --with-fpm-group=php --without-gdbm --enable-fast-install  --enable-zip
+# 注意一下目录 /usr/local/php
+./configure --prefix=/usr/local/php74 --with-config-file-path=/etc --with-mhash --with-openssl --with-mysqli=mysqlnd --with-pdo-mysql=mysqlnd --with-iconv --with-zlib --disable-debug --disable-rpath --enable-shared --enable-bcmath --enable-shmop --enable-sysvsem --enable-gd --with-jpeg --with-freetype --enable-mbregex --enable-mbstring --enable-ftp --enable-pcntl --enable-sockets --enable-soap --without-pear --with-gettext --enable-session --with-curl  --enable-opcache --enable-fpm --with-fpm-user=php --with-fpm-group=php --without-gdbm --enable-fast-install
 ```
 
 - 查看php版本
@@ -21,14 +22,26 @@ php.ini-production
 
 ```
 cp php.ini-production /etc/php.ini
+mv /usr/local/php/etc/php-fpm.conf.default /usr/local/php/etc/php-fpm.conf
+mv /usr/local/php/etc/php-fpm.d/www.conf.default /usr/local/php/etc/php-fpm.d/www.conf
+
+修改php-fpm 用户为nginx
+vim /usr/local/php74/etc/php-fpm.d/www.conf
+user = nginx
+group = nginx
+
+修改默认日志文件位置：
+vim /usr/local/php74/etc/php-fpm.conf
+; Note: the default prefix is /usr/local/php74/var
+; error_log = log/php-fpm.log
+
+error_log = /var/log/php-fpm.log
 ```
 
 - 启动和添加开机启动
 
 ```
-cd php-8.2.7/sapi/fpm
-
-cp php-fpm.service /etc/systemd/system/
+cp php/sapi/fpm/php-fpm.service /etc/systemd/system/
 
 # 启动php-fpm
 systemctl start php-fpm
@@ -40,7 +53,7 @@ systemctl status php-fpm
 - 修改用户
 
 ```
-vi /etc/opt/remi/php74/php-fpm.d/www.conf
+vim /usr/local/php/etc/php-fpm.d/www.conf
 user = apache
 group = apache
 修改为
@@ -79,22 +92,39 @@ Installing shared extensions:     /usr/local/php82/lib/php/extensions/no-debug-n
 extension=redis.so
 ```
 
-
-
 - ext-zip扩展安装
 
 下载地址：http://pecl.php.net/package/zip
 
-安装步骤和上面一样
+```
+phpize
 
-# 安装mysql
+./configure
+
+make && make install
+
+extension=zip.so
+```
+
+
+
+
+
+# mysql
 
 安装文档走就好了
 
 https://dev.mysql.com/doc/refman/8.0/en/linux-installation-yum-repo.html
 
-cd 
-
-
-
 ALTER USER 'root'@'localhost' IDENTIFIED BY '7mF!EcgxtSKH53d7';
+
+
+
+Mysql 重启失败卡住
+
+```
+chown -R mysql.mysql /var/run/mysqld/
+
+systemctl start mysqld
+```
+
