PDF批量去水印

--- a/php/编译安装.md
+++ b/php/编译安装.md
@@ -128,3 +128,22 @@ chown -R mysql.mysql /var/run/mysqld/
 systemctl start mysqld
 ```
 
+
+
+创建数据库，用户，授权
+
+```
+CREATE DATABASE short_play
+  CHARACTER SET utf8mb4
+  COLLATE utf8mb4_unicode_ci;
+  
+create user 'agent_admin'@'%' identified by 'qT3g^U@GenqF9f4b';
+
+grant all privileges on yardb.* to agent_admin@'%';
+
+flush privileges;
+
+
+
+```
+
