--- a/php/编译安装.md
+++ b/php/编译安装.md
@@ -133,17 +133,22 @@ systemctl start mysqld
 创建数据库，用户，授权
 
 ```
-CREATE DATABASE short_play
+CREATE DATABASE abc
   CHARACTER SET utf8mb4
   COLLATE utf8mb4_unicode_ci;
   
-create user 'agent_admin'@'%' identified by 'qT3g^U@GenqF9f4b';
+create user 'abc'@'%' identified by '123456';
 
-grant all privileges on yardb.* to agent_admin@'%';
+grant all privileges on abc.* to abc@'%';
 
 flush privileges;
+```
 
 
 
+## redis
+
+```
+redis-server /etc/redis/6379.conf
 ```
 
